# RK1

./: CMakeLists.txt
.github/workflows/: deploy.yml
include/: State.h
src/: SpeechRecognitionState.cpp  main.cpp
tests/: CMakeLists.txt  test1.cpp
